--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "pnpm": "9.13.0"
+    "pnpm": ">=9.14.2"
   },
   "scripts": {
     "dev": "next dev --turbopack",
