--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "tailwindcss": "^3.4.14",
     "turbo": "^2.3.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@9.14.2"
+
+  
 }
